feat: Loader added in the login page

--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -15,3 +15,16 @@ body {
 .tab-active {
     @apply bg-purple-500 text-white;
 }
+.dots-1 {
+    width: 40px;
+    aspect-ratio: 4;
+    background: radial-gradient(circle closest-side, #FFF 90%, #0000) 0/calc(100%/3) 100% space;
+    clip-path: inset(0 100% 0 0);
+    animation: d1 0.75s steps(4) infinite;
+}
+
+@keyframes d1 {
+    to {
+        clip-path: inset(0 -34% 0 0)
+    }
+}
